--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
 
       link.setAttribute('href', url);
 
+      // Redirect in 3 seconds
       setTimeout(() => {
         window.location.href = url;
       }, 3000)
